assets/src/scss/pages/post/_article-content.scss
.post-content {
  color: $grey-80;
  margin-bottom: 0;
  z-index: 3;

  .cover-card {
    width: auto;
    position: relative;

    @include medium-and-up {
      min-height: 365px;
      width: 290px;
      float: right;
      margin-left: 10px;

      html[dir="rtl"] & {
        float: left;
      }
    }

    @include large-and-up {
      margin-left: 0;
    }

    @include x-large-and-up {
      width: 330px;
      min-height: 415px;
    }

    .cover-card-tag {
      font-family: $roboto;
    }
  }

  h2 {
    margin-bottom: 15px;
    padding-top: 8px;

    @include medium-and-up {
      padding-top: 10px;
    }

    @include large-and-up {
      margin-bottom: 20px;
    }

    @include x-large-and-up {
      padding-top: 20px;
      margin-bottom: 20px;
    }
  }

  blockquote,
  blockquote > p {
    @include blockquote;
  }

  p {
    margin: 0 0 18px 0;
    overflow-wrap: break-word;
    word-wrap: break-word;

    @include medium-and-up {
      margin: 0 0 $n20 0;
    }

    iframe {
      width: 100%;
      height: 53vw;
      text-align: center;
      display: block;
      margin: 0 auto;
      border: none;
      overflow: hidden;

      @include small-and-up {
        height: 290px;
      }

      @include medium-and-up {
        height: 390px;
        padding: 0;
      }

      @include large-and-up {
        height: 350px;
      }

      @include x-large-and-up {
        height: 410px;
      }
    }
  }

  img {
    max-width: 100%;
    height: auto;

    &.alignnone {
      margin-top: $space-md;
      margin-bottom: $space-xl;

      @include large-and-up {
        margin-top: $space-lg;
        margin-bottom: $space-xxl;
      }
    }
  }

  .alignleft {
    @include small-and-up {
      float: left;
      margin: 0 $n10 $n10 0;
      padding-top: 6px;
      max-width: 100%;
    }
  }

  .alignright {
    @include small-and-up {
      float: right;
      margin: 0 0 $n10 $n10;
      padding-top: 6px;
      max-width: 100%;
    }
  }

  .aligncenter {
    margin-left: auto;
    margin-right: auto;
    display: block;

    figcaption {
      display: block;
    }
  }

  cite {
    display: block;
    margin-top: 15px;
  }

  code {
    word-wrap: break-word;
  }

  dt {
    float: left;
    width: 20%;
    text-align: right;
    padding: .25em;
    clear: left;
  }

  dd {
    float: left;
    width: 80%;
    padding: .25em 0;
  }

  dl:after {
    content: "";
    display: table;
    clear: both;
  }

  .youtube-player {
    max-width: 100%;
  }

  .entry-content,
  .entry-title {
    word-wrap: break-word;
  }

  .entry-summary {
    @extend .post-content-lead;
  }

  .gallery {
    margin: 0 auto 18px;

    .gallery-icon img {
      width: 100%;
      height: auto;
    }

    .gallery-item {
      float: left;
      margin-top: 0;

      @include mobile-only {
        width: calc(50% - 10px);
      }

      .gallery-caption {
        display: none;
      }
    }

    figure {
      margin: .5rem .5rem .5rem 0;
    }

    .gallery-columns-2 .attachment-medium {
      max-width: 92%;
      height: auto;
    }

    .gallery-columns-4 .attachment-thumbnail {
      max-width: 84%;
      height: auto;
    }

    dl,
    dt {
      margin: 0;
    }

    br + br {
      display: none;
    }
  }

  .more-link {
    @extend .btn;
    @extend .btn-secondary;
    @extend .btn-large;
  }

  .page-links {
    a {
      @extend .btn;
      @extend .btn-secondary;
      @extend .btn-small;
    }
  }

  q {
    font-style: italic;
  }
}

.post-content-lead {

  @include large-and-up {
    max-width: 65%;
  }

  p:first-of-type {
    margin-top: 0;
  }
}

.post-details {
  img {
    max-width: 100%;
    height: auto;
  }

  h4 {
    padding: $n20 0 $n10 0;
    font-weight: 700;
  }
}

.post-image,
.wp-caption {
  position: relative;
  display: inline-block;
  width: auto;
  max-width: 100%;

  &.alignnone {
    margin-bottom: $space-xl;
    margin-top: $space-md;

    @include large-and-up {
      margin-bottom: $space-xxl;
      margin-top: $space-lg;
    }
  }

  img {
    max-width: 100%;
    height: auto;
  }

  @include medium-and-up {
    .image-credit {
      position: absolute;
      text-align: right;
      right: 10px;
      width: 100%;
      color: $white;
      z-index: 2;
    }
  }

  .image-desc {
    display: block;
  }

  figcaption {
    margin-top: 10px;
  }

  .wp-caption-text {
    font-size: $font-size-xxs;
    font-family: $roboto;
    line-height: 1.4;
    margin-bottom: 0;
    padding-top: $n10;
    color: $grey-60;
    text-align: center;
  }
}

